--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,18 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "@mui/styled-engine-sc": "^7.3.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
+    "react-toastify": "^11.0.5",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
